--- a/appartamenti.html
+++ b/appartamenti.html
@@ -13,6 +13,9 @@
       <a href="index.html#home" class="logo" aria-label="Home — Appartamenti al Parco">
         <img src="logo-transparente.webp" alt="Logo Appartamenti al Parco">
       </a>
+      <button class="nav-toggle" aria-label="Menu" aria-expanded="false">
+      ☰
+    </button>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="appartamenti.html" aria-current="page">Appartamenti</a></li>
