--- a/eventi.html
+++ b/eventi.html
@@ -16,6 +16,9 @@
         <!-- use sua logo real -->
         <img src="logo-transparente.webp" alt="Logo Appartamenti Al Parco">
       </a>
+      <button class="nav-toggle" aria-label="Menu" aria-expanded="false">
+      ☰
+    </button>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="appartamenti.html">Appartamenti</a></li>
