--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <a href="#home" class="logo" aria-label="Home — Appartamenti Al Parco">
       <img src="logo-transparente.webp" alt="Logo Appartamenti Al Parco">
     </a>
-
+<button class="nav-toggle" aria-label="Menu" aria-expanded="false">
+      ☰
+    </button>
    <ul>
   <li><a href="index.html#home">Home</a></li>
   <li><a href="appartamenti.html">Appartamenti</a></li>
