--- a/appartamenti.html
+++ b/appartamenti.html
@@ -13,9 +13,6 @@
       <a href="index.html#home" class="logo" aria-label="Home — Appartamenti al Parco">
         <img src="logo-transparente.webp" alt="Logo Appartamenti al Parco">
       </a>
-      <button class="nav-toggle" aria-label="Menu" aria-expanded="false">
-      ☰
-    </button>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="appartamenti.html" aria-current="page">Appartamenti</a></li>
@@ -114,7 +111,7 @@ Ideale per 4 ospiti, fino a 6 posti letto disponibili.
         </footer>
       </article>
 
-      <!-- ===---------------------------------------------------== Appartamento Dolomiti ===-------------------------------------------------== -->
+      <!-- ===--------------------------------------------------- Appartamento Dolomiti-------------------------------------------------== -->
       <article aria-labelledby="apt-dolomiti-title">
         <h2 id="apt-dolomiti-title">Appartamento Dolomiti</h2>
 
